# test_task_sky

./: .env.template  README.MD  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py
core/migrations/: 0001_initial.py
sales_chain/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
sales_chain/migrations/: 0001_initial.py  0002_alter_chainlink_product.py  0003_alter_chainlink_debt.py  0004_rename_product_chainlink_products_and_more.py  0005_remove_chainlink_hierarchy.py
sales_network/: asgi.py  settings.py  urls.py  wsgi.py
